2004-02-27  Nick Clifton  <nickc@redhat.com>

	* config/tc-sh.c (get_operand): Revert previous delta.
	(tc_gen_reloc): Check for an unknown reloc type before processing
	the addend.

2004-02-27  Hannes Reinecke  <hare@suse.de>

	* config/tc-s390.c (s390_insn): Correct range check for opcode in
	.insn pseudo operation.

2004-02-27  Anil Paranjpe  <anilp1@kpitcummins.com>

	* config/tc-sh.c (get_operand):  In case of #Imm, check has been
	added for wrong syntax.

2004-02-26  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c (mips_dwarf2_addr_size): New.
	* config/tc-mips.h (DWARF2_ADDR_SIZE): Use.

2004-02-26  Andrew Stubbs <andrew.stubbs@superh.com>

	* config/tc-sh.c (build_Mytes): Add REG_N_D and REG_N_B01
	nibble types to assembler.

2004-02-25  Fred Fish  <fnf@redhat.com>

	* config/tc-iq2000.c: Add missing \n\ in multiline string literal.

2004-02-20  James E Wilson  <wilson@specifixinc.com>

	* config/tc-ia64.c (slot_index): New arg before_relax.  Use instead of
	finalize_syms.
	(fixup_unw_records): New arg before_relax.  Pass to slot_index.
	(ia64_estimate_size_before_relax): New.
	(ia64_convert_frag): Pass 0 to fixup_unw_records.  Add comment.
	(generate_unwind_image): Pass 1 to fixup_unw_records.
	* config/tc-ia64.h (ia64_estimate_size_before_relax): Declare.
	(md_estimate_size_before_relax): Call ia64_estimate_size_before_relax.

2004-02-19  Jakub Jelinek  <jakub@redhat.com>

	* stabs.c (generate_asm_file): Avoid warning about use of
	uninitialized variable.

2004-02-18  David Mosberger  <davidm@hpl.hp.com>

	* config/tc-ia64.c (ia64_flush_insns): In addition to prologue,
	body, and endp, allow unwind records which do not have a "t"
	(time/instruction) field.

2004-02-17  Petko Manolov  <petkan@nucleusys.com>

	* config/tc-arm.c (do_mav_dspsc_1): Correct offset of CRn.
	(do_mav_dspsc_2): Likewise.
	Fix accumulator registers move opcodes.

2004-02-13  Hannes Reinecke  <hare@suse.de>
            Jakub Jelinek  <jakub@redhat.com>
